Poprawki w GUI i innych Teraz w końcu NAPRAWDĘ wrzuciłem Heuristics (trochę okomentowane)

--- a/InverseCinematics/InverseCinematics/InverseCinematics.csproj
+++ b/InverseCinematics/InverseCinematics/InverseCinematics.csproj
@@ -82,6 +82,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="scenario_04.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="scenario_01.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
